cambio de buscador

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 		<div class="home__search-container">
 			<form class="home__form" title="Google">
 				<div class="fas fa-search"></div>
-				<input type="text" class="google-search" placeholder="Buscar en Google o escribir una URL">
+				<input type="text" class="google-search" placeholder="Buscar en Minectaft o escribir una URL">
 				<button class="form__microphone-icon" type="button" title="Búsqueda por voz"></button>
 			</form>
 		</div>
